templates/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dev
  labels:
    name: dev
---
apiVersion: v1
kind: Namespace
metadata:
  name: prod
  labels:
    name: prod 
---
apiVersion: v1
kind: Namespace
metadata:
  name: qa
  labels:
    name: qa
---
apiVersion: v1
kind: Namespace
metadata:
  name: kia
  labels:
    name: kia
