templates/deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-deployment
  namespace: kia
  labels:
    team: dev1

spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      serviceAccountName: account1
      containers:
        - image: 544234170512.dkr.ecr.us-east-1.amazonaws.com/stenography:7f314b9
          name: my-container-1
          ports:
            - containerPort: 8000
