templates/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: my-svc
  namespace: kia
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 8000
  selector:
    app: my-app
